--- a/DeLanceyJ-Project2/index.html
+++ b/DeLanceyJ-Project2/index.html
@@ -1,13 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Notes</title>
+	<title>Project2RandomNameGenerator</title>
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="normalize.css">
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 <div class="main">
+
+	<div class="header">
+		<h1>Random Name Generator</h1>
+			<sub>*Names Are Not Always Guaranteed To Be Cool*</sub>
+	</div>
+
+	<div class="name-form">
+		
+		<form>
+			<h2>Use this Form to generate a random name, and specify how many names you want.</h2>
+
+			<p>How many Randon Names would you like? Please Limit your amount between 1 and 10.</p>
+
+				<input type="number" name="inputNumber" min="1" max="10">
+
+			<p>Click the Submit button to see your results!</p>
+
+				<input type="button" class="button" onClick="ranNumGen()" value="submit">
+
+				<button type="reset" class="button" value="reset">Reset</button>
+
+
+
+
+
+		</form>
+
+
+
+	</div>
+
+	<div class="name-answers">
+		
+		<p><strong>Here is your list of names!</strong><br> <span class="users-input"></span></p>
+
+
+		<p><span class="snarky-message"></span></p>
+
+
+
+
+
+	</div>
+
+
+
+
+
+
 
 </div>
 <script src="js/main.js"></script>
